[tool.poetry]
name = "hpa250b-ble"
version = "0.1.0"
description = ""
authors = ["Vlad Yarotsky <vladimir.yarotsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
bleak = "^0.21.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
vulture = "^2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
